build_macro_mkPaths()
FIND_FINAL_TARGET()

set(SRC_CSS_FILES
    ${mk_srcdir}/balloonNote.css
    ${mk_srcdir}/breakpoint.css
    ${mk_srcdir}/callstack.css
    ${mk_srcdir}/console.css
    ${mk_srcdir}/css.css
    ${mk_srcdir}/customizeShortcuts.css
    ${mk_srcdir}/debugger.css
    ${mk_srcdir}/dom.css
    ${mk_srcdir}/firebug.css
    ${mk_srcdir}/fontViewer.css
    ${mk_srcdir}/html.css
    ${mk_srcdir}/jsonViewer.css
    ${mk_srcdir}/layout.css
    ${mk_srcdir}/net.css
    ${mk_srcdir}/orion.css
    ${mk_srcdir}/orion-firebug.css
    ${mk_srcdir}/panel.css
    ${mk_srcdir}/panelbase.css
    ${mk_srcdir}/performanceTiming.css
    ${mk_srcdir}/quickInfoBox.css
    ${mk_srcdir}/selectors.css
    ${mk_srcdir}/tableRep.css
    ${mk_srcdir}/timeInfoTip.css
    ${mk_srcdir}/window.css
)

set(SRC_PNG_FILES
    ${mk_srcdir}/activation-menu-console.png
    ${mk_srcdir}/activation-menu-net.png
    ${mk_srcdir}/activation-menu-script.png
    ${mk_srcdir}/arrowDown.png
    ${mk_srcdir}/arrowUp.png
    ${mk_srcdir}/breakOn.png
    ${mk_srcdir}/breakOnArmed.png
    ${mk_srcdir}/breakpoint.png
    ${mk_srcdir}/breakpointCondition.png
    ${mk_srcdir}/collapseSidePanels.png
    ${mk_srcdir}/collapseSidePanelsVertical.png
    ${mk_srcdir}/commandLinePopup.png
    ${mk_srcdir}/continue.png
    ${mk_srcdir}/disable.png
    ${mk_srcdir}/disableInactive.png
    ${mk_srcdir}/error.png
    ${mk_srcdir}/errorColumnIndicator.png
    ${mk_srcdir}/errorSmall.png
    ${mk_srcdir}/executionPointer.png
    ${mk_srcdir}/expandSidePanels.png
    ${mk_srcdir}/expandSidePanelsVertical.png
    ${mk_srcdir}/firebug.png
    ${mk_srcdir}/firebug16.png
    ${mk_srcdir}/firebug16Disabled.png
    ${mk_srcdir}/firebug16EnabledInBackground.png
    ${mk_srcdir}/firebug32.png
    ${mk_srcdir}/firebug64.png
    ${mk_srcdir}/info.png
    ${mk_srcdir}/inspect.png
    ${mk_srcdir}/loading.png
    ${mk_srcdir}/navigationBack.png
    ${mk_srcdir}/navigationForward.png
    ${mk_srcdir}/noteBorders.png
    ${mk_srcdir}/noteBordersUps.png
    ${mk_srcdir}/noteContent.png
    ${mk_srcdir}/noteContentUps.png
    ${mk_srcdir}/noteCorners.png
    ${mk_srcdir}/noteCornersUps.png
    ${mk_srcdir}/notificationClose.png
    ${mk_srcdir}/pin.png
    ${mk_srcdir}/rerun.png
    ${mk_srcdir}/rulerH.png
    ${mk_srcdir}/rulerV.png
    ${mk_srcdir}/search.png
    ${mk_srcdir}/searchClose.png
    ${mk_srcdir}/searchHovered.png
    ${mk_srcdir}/stepInto.png
    ${mk_srcdir}/stepOut.png
    ${mk_srcdir}/stepOver.png
    ${mk_srcdir}/warning.png
)

set(SRC_XML_FILES
    ${mk_srcdir}/bindings.xml
)

set(SOURCE_FILES
    ${SRC_CSS_FILES}
    ${SRC_PNG_FILES}
    ${SRC_XML_FILES}
)

COPY_TO_DIST("${SOURCE_FILES}")

add_subdirectory(breakOn)
add_subdirectory(cookies)
add_subdirectory(linux)
add_subdirectory(mac)
add_subdirectory(tabbar)
add_subdirectory(win)